--- a/my-site/package.json
+++ b/my-site/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.3.1",
-    "vue-notification": "^1.3.20"
+    "vue-notification": "^1.3.20",
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
